# arcane-scribe

./: .gitignore  Dockerfile  README.md  app.py  cdk.context.json  cdk.json  dev_test_harness.py  noxfile.py  pyproject.toml
.github/workflows/: deploy-arcane-scribe.yaml  deploy-rag.yaml
cdk/: cognito_stack.py  stacks.py
cdk/custom_constructs/: __init__.py  api_custom_domain.py  cognito_admin_user.py  cognito_user_pool.py  dynamodb_table.py  http_api.py  http_lambda_authorizer.py  iam_policy_statement.py  iam_role.py  lambda_function.py  lamdba_function.py  rest_api.py  s3_bucket.py  token_authorizer.py
src/as-api-backend/: Dockerfile  handler.py  requirements.txt
src/as-api-backend/api_backend/: __init__.py  api.py  config.py
src/as-api-backend/api_backend/aws/: __init__.py  bedrock_runtime.py  dynamodb.py  s3.py  ssm.py
src/as-api-backend/api_backend/dependencies/: __init__.py  dependencies.py
src/as-api-backend/api_backend/models/: __init__.py  query.py  srd.py
src/as-api-backend/api_backend/routers/: query.py  srd.py
src/as-api-backend/api_backend/utils/: __init__.py  config.py  enums.py  presigned_url_generator.py  rag_query_processor.py
src/as-authorizer/: Dockerfile  handler.py  requirements.txt
src/as-authorizer/api_authorizer/: __init__.py  utils.py
src/as-pdf-ingestor/: Dockerfile  handler.py  requirements.txt
src/as-pdf-ingestor/pdf_ingestor/: processor.py
src/as-presigned-url-generator/: Dockerfile  handler.py  requirements.txt
src/as-presigned-url-generator/presigned_url_generator/: data_classes.py  processor.py
src/as-rag-query/: Dockerfile  handler.py  requirements.txt
src/as-rag-query/rag_query_processor/: processor.py
tests/: conftest.py
tests/unit/: basic_test.py
tests/unit/as_authorizer/: test_handler.py
tests/unit/as_pdf_ingestor/: test_handler.py
tests/unit/as_presigned_url_generator/: test_data_classes.py  test_handler.py  test_processor.py
tests/unit/as_rag_query/: test_handler.py  test_processor.py
tests/unit/test_as_presigned_url_generator/: test_pug_handler.py
tests/unit/test_as_presigned_url_generator/test_presigned_url_generator/: test_pug_data_classes.py  test_pug_processor.py
